# rust_test1

./: .gitignore  Cargo.toml
.github/workflows/: build-and-release.yml  rust_build.yml
data/: conf.toml
src/: main.rs
src/api/: auth.rs  mod.rs  res.rs  route.rs
src/cmd/: cmd1.rs  cmd_db.rs  cmd_openapi.rs  cmd_test.rs  mod.rs
src/config/: configs.rs  mod.rs
src/consts/: mod.rs
src/controller/: auth.rs  mod.rs
src/dao/: mod.rs
src/logic/: readme.md
src/model/: mod.rs
src/model/entity/: mod.rs  tables.rs
src/service/: readme.md
