[package]
name = "test1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
opt-level = "z" # Optimize for size
panic = "abort"
